--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         </ul>
      </nav>
     </header>
+    <main>
+        <section>
+            <p>Передовая IT студия</p>
+            <h1>Мы создаем легкие решения сложных задач и проблем</h1>
+            <button type="button">Наши проекты</button>
+        </section>
+    </main>
 
 </body>
 </html>
