--- a/index.html
+++ b/index.html
@@ -1,61 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <nav>
-        <ul>
-          <li><a href="">Главная</a></li>
-          <li><a href="">Наши проекты</a></li>
-          <li><a href="">Услуги</a></li>
-          <li><a href="">Новости</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-      </nav>
+        <nav>
+            <ul>
+                <li><a href="">Главная</a></li>
+                <li><a href="">Наши проекты</a></li>
+                <li><a href="">Услуги</a></li>
+                <li><a href="">Новости</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-      <section>
-        <p>Передовая IT студия</p>
-        <h1>Мы создаем легкие решения сложных задач и проблем</h1>
-        <button type="button">Наши проекты</button>
-      </section>
-      <section>
-        <h2>Мы создаем мобильные приложения для крупных корпораций</h2>
-        <p>
-          Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-          вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
-          латинице с начала XVI века.
-        </p>
-        <ul>
-          <li>
-            <h3>Создание сайтов</h3>
+        <section>
+            <p>Передовая IT студия</p>
+            <h1>Мы создаем легкие решения сложных задач и проблем</h1>
+            <button type="button">Наши проекты</button>
+        </section>
+        <section>
+            <h2>Мы создаем мобильные приложения для крупных корпораций</h2>
             <p>
-              Lorem Ipsum - это текст- "рыба", часто используе в печати и
-              вэб-дизайне.
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
             </p>
-          </li>
-          <li>
-            <h3>Создание сайтов</h3>
+            <ul>
+                <li>
+                    <h3>Создание сайтов</h3>
+                    <p>
+                        Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.
+                    </p>
+                </li>
+                <li>
+                    <h3>Создание сайтов</h3>
+                    <p>
+                        Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.
+                    </p>
+                </li>
+                <li>
+                    <h3>Создание сайтов</h3>
+                    <p>
+                        Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.
+                    </p>
+                </li>
+            </ul>
+            <button type="button">Все услуги</button>
+        </section>
+        <section>
+            <h2>Высокие стандарты разработки</h2>
             <p>
-              Lorem Ipsum - это текст- "рыба", часто используе в печати и
-              вэб-дизайне.
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. стандартной "рыбой" для текстов на латинице с начала XVI века.
             </p>
-          </li>
-          <li>
-            <h3>Создание сайтов</h3>
-            <p>
-              Lorem Ipsum - это текст- "рыба", часто используе в печати и
-              вэб-дизайне.
-            </p>
-          </li>
-        </ul>
-        <button type="button">Все услуги</button>
-      </section>
+            <a href="">Подробнее о компании</a>
+            <img src="./img/img-1.png" alt="робочий стол" />
+            <ul>
+                <li>
+                    <span>125</span>
+                    <p>Our projects</p>
+                </li>
+                <li>
+                    <span>125</span>
+                    <p>Our projects</p>
+                </li>
+                <li>
+                    <span>125</span>
+                    <p>Our projects</p>
+                </li>
+                <li>
+                    <span>125</span>
+                    <p>Our projects</p>
+                </li>
+                <li>
+                    <span>125</span>
+                    <p>Our projects</p>
+                </li>
+            </ul>
+        </section>
     </main>
-  </body>
+</body>
+
 </html>
