--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </section>
       <section>
         <h2>Наши работы, на которых мы специализируемся</h2>
-        <button>Все услуги</button>
+        <button type="button">Все услуги</button>
         <ul>
           <li>
             <img src="./img/img-2.png" alt="командная работа" width="350" />
@@ -125,6 +125,29 @@
             <a href="">Подробнее</a>
           </li>
         </ul>
+      </section>
+      <section>
+        <h2>Наши проекты</h2>
+        <p>
+          Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+          вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
+          латинице с начала XVI века.
+        </p>
+        <ul>
+          <li>
+            <img src="./img/img-3.png" alt="код" width="255" height="255" />
+          </li>
+          <li>
+            <img src="./img/img-3.png" alt="код" width="255" height="255" />
+          </li>
+          <li>
+            <img src="./img/img-3.png" alt="код" width="255" height="255" />
+          </li>
+          <li>
+            <img src="./img/img-3.png" alt="код" width="255" height="255" />
+          </li>
+        </ul>
+        <button type="button">Все проекты</button>
       </section>
     </main>
   </body>
