--- a/index.html
+++ b/index.html
@@ -1,154 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <header>
-      <nav>
-        <ul>
-          <li><a href="">Главная</a></li>
-          <li><a href="">Наши проекты</a></li>
-          <li><a href="">Услуги</a></li>
-          <li><a href="">Новости</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-      </nav>
+        <nav>
+            <ul>
+                <li><a href="">Главная</a></li>
+                <li><a href="">Наши проекты</a></li>
+                <li><a href="">Услуги</a></li>
+                <li><a href="">Новости</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-      <section>
-        <p>Передовая IT студия</p>
-        <h1>Мы создаем легкие решения сложных задач и проблем</h1>
-        <button type="button">Наши проекты</button>
-      </section>
-      <section>
-        <h2>Мы создаем мобильные приложения для крупных корпораций</h2>
-        <p>
-          Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-          вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
-          латинице с начала XVI века.
-        </p>
-        <ul>
-          <li>
-            <h3>Создание сайтов</h3>
+        <section>
+            <p>Передовая IT студия</p>
+            <h1>Мы создаем легкие решения сложных задач и проблем</h1>
+            <button type="button">Наши проекты</button>
+        </section>
+        <section>
+            <h2>Мы создаем мобильные приложения для крупных корпораций</h2>
             <p>
-              Lorem Ipsum - это текст- "рыба", часто используе в печати и
-              вэб-дизайне.
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
             </p>
-          </li>
-          <li>
-            <h3>Создание сайтов</h3>
+            <ul>
+                <li>
+                    <h3>Создание сайтов</h3>
+                    <p>
+                        Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.
+                    </p>
+                </li>
+                <li>
+                    <h3>Создание сайтов</h3>
+                    <p>
+                        Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.
+                    </p>
+                </li>
+                <li>
+                    <h3>Создание сайтов</h3>
+                    <p>
+                        Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.
+                    </p>
+                </li>
+            </ul>
+            <button type="button">Все услуги</button>
+        </section>
+        <section>
+            <h2>Высокие стандарты разработки</h2>
             <p>
-              Lorem Ipsum - это текст- "рыба", часто используе в печати и
-              вэб-дизайне.
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. стандартной "рыбой" для текстов на латинице с начала XVI века.
             </p>
-          </li>
-          <li>
-            <h3>Создание сайтов</h3>
+            <a href="">Подробнее о компании</a>
+            <img src="./img/img-1.png" alt="робочий стол" width="500" />
+            <ul>
+                <li>
+                    <span>125</span>
+                    <p>Our projects</p>
+                </li>
+                <li>
+                    <span>125</span>
+                    <p>Our projects</p>
+                </li>
+                <li>
+                    <span>125</span>
+                    <p>Our projects</p>
+                </li>
+                <li>
+                    <span>125</span>
+                    <p>Our projects</p>
+                </li>
+                <li>
+                    <span>125</span>
+                    <p>Our projects</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наши работы, на которых мы специализируемся</h2>
+            <button type="button">Все услуги</button>
+            <ul>
+                <li>
+                    <img src="./img/img-2.png" alt="командная работа" width="350" />
+                    <h3><span>01.</span> Исследование и упаковка</h3>
+                    <p>
+                        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+                    </p>
+                    <a href="">Подробнее</a>
+                </li>
+                <li>
+                    <img src="./img/img-2.png" alt="командная работа" width="350" />
+                    <h3><span>01.</span> Исследование и упаковка</h3>
+                    <p>
+                        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+                    </p>
+                    <a href="">Подробнее</a>
+                </li>
+                <li>
+                    <img src="./img/img-2.png" alt="командная работа" width="350" />
+                    <h3><span>01.</span> Исследование и упаковка</h3>
+                    <p>
+                        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+                    </p>
+                    <a href="">Подробнее</a>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наши проекты</h2>
             <p>
-              Lorem Ipsum - это текст- "рыба", часто используе в печати и
-              вэб-дизайне.
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
             </p>
-          </li>
-        </ul>
-        <button type="button">Все услуги</button>
-      </section>
-      <section>
-        <h2>Высокие стандарты разработки</h2>
-        <p>
-          Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-          вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
-          латинице с начала XVI века. стандартной "рыбой" для текстов на
-          латинице с начала XVI века.
-        </p>
-        <a href="">Подробнее о компании</a>
-        <img src="./img/img-1.png" alt="робочий стол" width="500" />
-        <ul>
-          <li>
-            <span>125</span>
-            <p>Our projects</p>
-          </li>
-          <li>
-            <span>125</span>
-            <p>Our projects</p>
-          </li>
-          <li>
-            <span>125</span>
-            <p>Our projects</p>
-          </li>
-          <li>
-            <span>125</span>
-            <p>Our projects</p>
-          </li>
-          <li>
-            <span>125</span>
-            <p>Our projects</p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Наши работы, на которых мы специализируемся</h2>
-        <button type="button">Все услуги</button>
-        <ul>
-          <li>
-            <img src="./img/img-2.png" alt="командная работа" width="350" />
-            <h3><span>01.</span> Исследование и упаковка</h3>
-            <p>
-              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
-              на латинице с начала XVI века.
-            </p>
-            <a href="">Подробнее</a>
-          </li>
-          <li>
-            <img src="./img/img-2.png" alt="командная работа" width="350" />
-            <h3><span>01.</span> Исследование и упаковка</h3>
-            <p>
-              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
-              на латинице с начала XVI века.
-            </p>
-            <a href="">Подробнее</a>
-          </li>
-          <li>
-            <img src="./img/img-2.png" alt="командная работа" width="350" />
-            <h3><span>01.</span> Исследование и упаковка</h3>
-            <p>
-              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
-              на латинице с начала XVI века.
-            </p>
-            <a href="">Подробнее</a>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Наши проекты</h2>
-        <p>
-          Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-          вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
-          латинице с начала XVI века.
-        </p>
-        <ul>
-          <li>
-            <img src="./img/img-3.png" alt="код" width="255" height="255" />
-          </li>
-          <li>
-            <img src="./img/img-3.png" alt="код" width="255" height="255" />
-          </li>
-          <li>
-            <img src="./img/img-3.png" alt="код" width="255" height="255" />
-          </li>
-          <li>
-            <img src="./img/img-3.png" alt="код" width="255" height="255" />
-          </li>
-        </ul>
-        <button type="button">Все проекты</button>
-      </section>
+            <ul>
+                <li>
+                    <img src="./img/img-3.png" alt="код" width="255" height="255" />
+                </li>
+                <li>
+                    <img src="./img/img-3.png" alt="код" width="255" height="255" />
+                </li>
+                <li>
+                    <img src="./img/img-3.png" alt="код" width="255" height="255" />
+                </li>
+                <li>
+                    <img src="./img/img-3.png" alt="код" width="255" height="255" />
+                </li>
+            </ul>
+            <button type="button">Все проекты</button>
+        </section>
+        <section>
+            <h2>Видео о нашей работе</h2>
+            <p>Просто посмотрите, как мы работаем</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/jpmJC4qBILs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
     </main>
-  </body>
+</body>
+
 </html>
