add submit section

--- a/index.html
+++ b/index.html
@@ -139,6 +139,15 @@
             <p>Просто посмотрите, как мы работаем</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/jpmJC4qBILs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
+        <section>
+            <b>Подпишитесь на нашу рассылку</b>
+            <p>Полезные статьи, акции, новости - получите все это сейчас!</p>
+            <form>
+                <input type="email" placeholder="Ваш e-mail" >
+                <button type="submit"></button>
+            </form>
+            <p>Мы не шлем спам, и передаем никому ваши данные.</p>
+        </section>
     </main>
 </body>
 
