--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <p>Полезные статьи, акции, новости - получите все это сейчас!</p>
             <form>
                 <input type="email" placeholder="Ваш e-mail" >
-                <button type="submit"></button>
+                <button type="submit"> Подписаться</button>
             </form>
             <p>Мы не шлем спам, и передаем никому ваши данные.</p>
         </section>
