--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="">Главная</a></li>
-                <li><a href="">Наши проекты</a></li>
-                <li><a href="">Услуги</a></li>
-                <li><a href="">Новости</a></li>
-                <li><a href="">Контакты</a></li>
+    <header class="header" >
+        <nav class="header-nav">
+            <ul class="header-list list">
+                <li class="header-item"><a href="" class="header-link link">Наши проекты</a></li>
+                <li class="header-item"><a href="" class="header-link link">Услуги</a></li>
+                <li class="header-item"><a href="" class="header-link link">Главная</a></li>
+                <li class="header-item"><a href="" class="header-link link">Новости</a></li>
+                <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
             </ul>
         </nav>
     </header>
