--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header class="header" >
+    <header class="header">
         <nav class="header-nav">
             <ul class="header-list list">
                 <li class="header-item"><a href="" class="header-link link">Наши проекты</a></li>
@@ -25,10 +25,10 @@
         </nav>
     </header>
     <main>
-        <section>
-            <p>Передовая IT студия</p>
-            <h1>Мы создаем легкие решения сложных задач и проблем</h1>
-            <button type="button">Наши проекты</button>
+        <section class="hero">
+            <p class="hero-text">Передовая IT студия</p>
+            <h1 class="hero-tittle">Мы создаем легкие решения сложных задач и проблем</h1>
+            <button type="button" class="hero-button">Наши проекты</button>
         </section>
         <section>
             <h2>Мы создаем мобильные приложения для крупных корпораций</h2>
@@ -147,7 +147,7 @@
             <b>Подпишитесь на нашу рассылку</b>
             <p>Полезные статьи, акции, новости - получите все это сейчас!</p>
             <form>
-                <input type="email" placeholder="Ваш e-mail" >
+                <input type="email" placeholder="Ваш e-mail">
                 <button type="submit"> Подписаться</button>
             </form>
             <p>Мы не шлем спам, и передаем никому ваши данные.</p>
