Додав секцію Мобайл

--- a/index.html
+++ b/index.html
@@ -1,158 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <nav class="header-nav">
-            <ul class="header-list list">
-                <li class="header-item"><a href="" class="header-link link">Наши проекты</a></li>
-                <li class="header-item"><a href="" class="header-link link">Услуги</a></li>
-                <li class="header-item"><a href="" class="header-link link">Главная</a></li>
-                <li class="header-item"><a href="" class="header-link link">Новости</a></li>
-                <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
-            </ul>
-        </nav>
+      <nav class="header-nav">
+        <ul class="header-list list">
+          <li class="header-item">
+            <a href="" class="header-link link">Наши проекты</a>
+          </li>
+          <li class="header-item">
+            <a href="" class="header-link link">Услуги</a>
+          </li>
+          <li class="header-item">
+            <a href="" class="header-link link">Главная</a>
+          </li>
+          <li class="header-item">
+            <a href="" class="header-link link">Новости</a>
+          </li>
+          <li class="header-item">
+            <a href="" class="header-link link">Контакты</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section class="hero">
-            <p class="hero-text">Передовая IT студия</p>
-            <h1 class="hero-tittle">Мы создаем легкие решения сложных задач и проблем</h1>
-            <button type="button" class="hero-button">Наши проекты</button>
-        </section>
-        <section>
-            <h2>Мы создаем мобильные приложения для крупных корпораций</h2>
-            <p>
-                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+      <section class="hero">
+        <p class="hero-text">Передовая IT студия</p>
+        <h1 class="hero-tittle">
+          Мы создаем легкие решения сложных задач и проблем
+        </h1>
+        <button type="button" class="hero-button">Наши проекты</button>
+      </section>
+      <section class="mobile">
+        <h2 class="mobile-title">
+          Мы создаем мобильные приложения для крупных корпораций
+        </h2>
+        <p class="mobile-text">
+          Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+          вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
+          латинице с начала XVI века.
+        </p>
+        <ul class="mobile-list list">
+          <li class="mobile-item">
+            <h3 class="mobile-lits-title">Создание сайтов</h3>
+            <p class="mobile-text">
+              Lorem Ipsum - это текст- "рыба", часто используе в печати и
+              вэб-дизайне.
             </p>
-            <ul>
-                <li>
-                    <h3>Создание сайтов</h3>
-                    <p>
-                        Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.
-                    </p>
-                </li>
-                <li>
-                    <h3>Создание сайтов</h3>
-                    <p>
-                        Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.
-                    </p>
-                </li>
-                <li>
-                    <h3>Создание сайтов</h3>
-                    <p>
-                        Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.
-                    </p>
-                </li>
-            </ul>
-            <button type="button">Все услуги</button>
-        </section>
-        <section>
-            <h2>Высокие стандарты разработки</h2>
-            <p>
-                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. стандартной "рыбой" для текстов на латинице с начала XVI века.
+          </li>
+          <li class="mobile-item">
+            <h3 class="mobile-lits-title">Создание сайтов</h3>
+            <p class="mobile-text">
+              Lorem Ipsum - это текст- "рыба", часто используе в печати и
+              вэб-дизайне.
             </p>
-            <a href="">Подробнее о компании</a>
-            <img src="./img/img-1.png" alt="робочий стол" width="500" />
-            <ul>
-                <li>
-                    <span>125</span>
-                    <p>Our projects</p>
-                </li>
-                <li>
-                    <span>125</span>
-                    <p>Our projects</p>
-                </li>
-                <li>
-                    <span>125</span>
-                    <p>Our projects</p>
-                </li>
-                <li>
-                    <span>125</span>
-                    <p>Our projects</p>
-                </li>
-                <li>
-                    <span>125</span>
-                    <p>Our projects</p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Наши работы, на которых мы специализируемся</h2>
-            <button type="button">Все услуги</button>
-            <ul>
-                <li>
-                    <img src="./img/img-2.png" alt="командная работа" width="350" />
-                    <h3><span>01.</span> Исследование и упаковка</h3>
-                    <p>
-                        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
-                    </p>
-                    <a href="">Подробнее</a>
-                </li>
-                <li>
-                    <img src="./img/img-2.png" alt="командная работа" width="350" />
-                    <h3><span>01.</span> Исследование и упаковка</h3>
-                    <p>
-                        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
-                    </p>
-                    <a href="">Подробнее</a>
-                </li>
-                <li>
-                    <img src="./img/img-2.png" alt="командная работа" width="350" />
-                    <h3><span>01.</span> Исследование и упаковка</h3>
-                    <p>
-                        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
-                    </p>
-                    <a href="">Подробнее</a>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Наши проекты</h2>
-            <p>
-                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+          </li>
+          <li class="mobile-item">
+            <h3 class="mobile-lits-title">Создание сайтов</h3>
+            <p class="mobile-text">
+              Lorem Ipsum - это текст- "рыба", часто используе в печати и
+              вэб-дизайне.
             </p>
-            <ul>
-                <li>
-                    <img src="./img/img-3.png" alt="код" width="255" height="255" />
-                </li>
-                <li>
-                    <img src="./img/img-3.png" alt="код" width="255" height="255" />
-                </li>
-                <li>
-                    <img src="./img/img-3.png" alt="код" width="255" height="255" />
-                </li>
-                <li>
-                    <img src="./img/img-3.png" alt="код" width="255" height="255" />
-                </li>
-            </ul>
-            <button type="button">Все проекты</button>
-        </section>
-        <section>
-            <h2>Видео о нашей работе</h2>
-            <p>Просто посмотрите, как мы работаем</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/jpmJC4qBILs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </section>
-        <section>
-            <b>Подпишитесь на нашу рассылку</b>
-            <p>Полезные статьи, акции, новости - получите все это сейчас!</p>
-            <form>
-                <input type="email" placeholder="Ваш e-mail">
-                <button type="submit"> Подписаться</button>
-            </form>
-            <p>Мы не шлем спам, и передаем никому ваши данные.</p>
-        </section>
+          </li>
+        </ul>
+        <button type="button">Все услуги</button>
+      </section>
+      <section class="standard">
+        <h2>Высокие стандарты разработки</h2>
+        <p>
+          Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+          вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
+          латинице с начала XVI века. стандартной "рыбой" для текстов на
+          латинице с начала XVI века.
+        </p>
+        <a href="">Подробнее о компании</a>
+        <img src="./img/img-1.png" alt="робочий стол" width="500" />
+        <ul>
+          <li>
+            <span>125</span>
+            <p>Our projects</p>
+          </li>
+          <li>
+            <span>125</span>
+            <p>Our projects</p>
+          </li>
+          <li>
+            <span>125</span>
+            <p>Our projects</p>
+          </li>
+          <li>
+            <span>125</span>
+            <p>Our projects</p>
+          </li>
+          <li>
+            <span>125</span>
+            <p>Our projects</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наши работы, на которых мы специализируемся</h2>
+        <button type="button">Все услуги</button>
+        <ul>
+          <li>
+            <img src="./img/img-2.png" alt="командная работа" width="350" />
+            <h3><span>01.</span> Исследование и упаковка</h3>
+            <p>
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
+              на латинице с начала XVI века.
+            </p>
+            <a href="">Подробнее</a>
+          </li>
+          <li>
+            <img src="./img/img-2.png" alt="командная работа" width="350" />
+            <h3><span>01.</span> Исследование и упаковка</h3>
+            <p>
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
+              на латинице с начала XVI века.
+            </p>
+            <a href="">Подробнее</a>
+          </li>
+          <li>
+            <img src="./img/img-2.png" alt="командная работа" width="350" />
+            <h3><span>01.</span> Исследование и упаковка</h3>
+            <p>
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
+              на латинице с начала XVI века.
+            </p>
+            <a href="">Подробнее</a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наши проекты</h2>
+        <p>
+          Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+          вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
+          латинице с начала XVI века.
+        </p>
+        <ul>
+          <li>
+            <img src="./img/img-3.png" alt="код" width="255" height="255" />
+          </li>
+          <li>
+            <img src="./img/img-3.png" alt="код" width="255" height="255" />
+          </li>
+          <li>
+            <img src="./img/img-3.png" alt="код" width="255" height="255" />
+          </li>
+          <li>
+            <img src="./img/img-3.png" alt="код" width="255" height="255" />
+          </li>
+        </ul>
+        <button type="button">Все проекты</button>
+      </section>
+      <section>
+        <h2>Видео о нашей работе</h2>
+        <p>Просто посмотрите, как мы работаем</p>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/jpmJC4qBILs"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </section>
+      <section>
+        <b>Подпишитесь на нашу рассылку</b>
+        <p>Полезные статьи, акции, новости - получите все это сейчас!</p>
+        <form>
+          <input type="email" placeholder="Ваш e-mail" />
+          <button type="submit">Подписаться</button>
+        </form>
+        <p>Мы не шлем спам, и передаем никому ваши данные.</p>
+      </section>
     </main>
-</body>
-
+  </body>
 </html>
