--- a/index.html
+++ b/index.html
@@ -55,28 +55,28 @@
         </p>
         <ul class="mobile-list list">
           <li class="mobile-item">
-            <h3 class="mobile-lits-title">Создание сайтов</h3>
-            <p class="mobile-text">
+            <h3 class="mobile-list-title">Создание сайтов</h3>
+            <p class="mobile-list-text">
               Lorem Ipsum - это текст- "рыба", часто используе в печати и
               вэб-дизайне.
             </p>
           </li>
           <li class="mobile-item">
-            <h3 class="mobile-lits-title">Создание сайтов</h3>
-            <p class="mobile-text">
+            <h3 class="mobile-list-title">Создание сайтов</h3>
+            <p class="mobile-list-text">
               Lorem Ipsum - это текст- "рыба", часто используе в печати и
               вэб-дизайне.
             </p>
           </li>
           <li class="mobile-item">
-            <h3 class="mobile-lits-title">Создание сайтов</h3>
-            <p class="mobile-text">
+            <h3 class="mobile-list-title">Создание сайтов</h3>
+            <p class="mobile-list-text">
               Lorem Ipsum - это текст- "рыба", часто используе в печати и
               вэб-дизайне.
             </p>
           </li>
         </ul>
-        <button type="button">Все услуги</button>
+        <button type="button" class="mobile-btn">Все услуги</button>
       </section>
       <section class="standard">
         <h2>Высокие стандарты разработки</h2>
