--- a/index.html
+++ b/index.html
@@ -79,35 +79,35 @@
         <button type="button" class="mobile-btn">Все услуги</button>
       </section>
       <section class="standard">
-        <h2>Высокие стандарты разработки</h2>
-        <p>
+        <h2 class="standart-title">Высокие стандарты разработки</h2>
+        <p class="standart-text">
           Lorem Ipsum - это текст-"рыба", часто используемый в печати и
           вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
           латинице с начала XVI века. стандартной "рыбой" для текстов на
           латинице с начала XVI века.
         </p>
-        <a href="">Подробнее о компании</a>
+        <a href="" class="standart-link">Подробнее о компании</a>
         <img src="./img/img-1.png" alt="робочий стол" width="500" />
-        <ul>
-          <li>
-            <span>125</span>
-            <p>Our projects</p>
+        <ul class="standart-list list">
+          <li class="standart-item">
+            <span class="standart-item-count">125</span>
+            <p class="standart-item-text">Our projects</p>
           </li>
           <li>
-            <span>125</span>
-            <p>Our projects</p>
+            <span class="standart-item-count">125</span>
+            <p class="standart-item-text">Our projects</p>
           </li>
           <li>
-            <span>125</span>
-            <p>Our projects</p>
+            <span class="standart-item-count">125</span>
+            <p class="standart-item-text">Our projects</p>
           </li>
           <li>
-            <span>125</span>
-            <p>Our projects</p>
+            <span class="standart-item-count">125</span>
+            <p class="standart-item-text">Our projects</p>
           </li>
           <li>
-            <span>125</span>
-            <p>Our projects</p>
+            <span class="standart-item-count">125</span>
+            <p class="standart-item-text">Our projects</p>
           </li>
         </ul>
       </section>
