--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,25 +23,27 @@
 
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <ul class="header-list list">
-          <li class="header-item">
-            <a href="" class="header-link link">Наши проекты</a>
-          </li>
-          <li class="header-item">
-            <a href="" class="header-link link">Услуги</a>
-          </li>
-          <li class="header-item">
-            <a href="" class="header-link link">Главная</a>
-          </li>
-          <li class="header-item">
-            <a href="" class="header-link link">Новости</a>
-          </li>
-          <li class="header-item">
-            <a href="" class="header-link link">Контакты</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav class="header-nav">
+          <ul class="header-list list">
+            <li class="header-item">
+              <a href="" class="header-link link">Наши проекты</a>
+            </li>
+            <li class="header-item">
+              <a href="" class="header-link link">Услуги</a>
+            </li>
+            <li class="header-item">
+              <a href="" class="header-link link">Главная</a>
+            </li>
+            <li class="header-item">
+              <a href="" class="header-link link">Новости</a>
+            </li>
+            <li class="header-item">
+              <a href="" class="header-link link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <section class="hero">
