--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
     </header>
     <main>
       <section class="hero">
-        <p class="hero-text">Передовая IT студия</p>
-        <h1 class="hero-tittle">
-          Мы создаем легкие решения сложных задач и проблем
-        </h1>
-        <button type="button" class="hero-button">Наши проекты</button>
+        <div class="container">
+          <p class="hero-text">Передовая IT студия</p>
+          <h1 class="hero-tittle">
+            Мы создаем легкие решения сложных задач и проблем
+          </h1>
+          <button type="button" class="hero-button">Наши проекты</button>
+        </div>
       </section>
       <section class="mobile">
         <h2 class="mobile-title">
