add mobile sections

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
           <button type="button" class="hero-button">Наши проекты</button>
         </div>
       </section>
+      
       <section class="mobile">
+        <div class="container">
         <h2 class="mobile-title">
           Мы создаем мобильные приложения для крупных корпораций
         </h2>
@@ -88,6 +90,7 @@
           </li>
         </ul>
         <button type="button" class="mobile-btn">Все услуги</button>
+        </div>
       </section>
       <section class="standard">
         <h2 class="standart-title">Высокие стандарты разработки</h2>
