add standard block

--- a/index.html
+++ b/index.html
@@ -55,75 +55,81 @@
           <button type="button" class="hero-button">Наши проекты</button>
         </div>
       </section>
-      
+
       <section class="mobile">
         <div class="container">
-        <h2 class="mobile-title">
-          Мы создаем мобильные приложения для крупных корпораций
-        </h2>
-        <p class="mobile-text">
-          Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-          вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
-          латинице с начала XVI века.
-        </p>
-        <ul class="mobile-list list">
-          <li class="mobile-item">
-            <h3 class="mobile-list-title">Создание сайтов</h3>
-            <p class="mobile-list-text">
-              Lorem Ipsum - это текст- "рыба", часто используе в печати и
-              вэб-дизайне.
-            </p>
-          </li>
-          <li class="mobile-item">
-            <h3 class="mobile-list-title">Создание сайтов</h3>
-            <p class="mobile-list-text">
-              Lorem Ipsum - это текст- "рыба", часто используе в печати и
-              вэб-дизайне.
-            </p>
-          </li>
-          <li class="mobile-item">
-            <h3 class="mobile-list-title">Создание сайтов</h3>
-            <p class="mobile-list-text">
-              Lorem Ipsum - это текст- "рыба", часто используе в печати и
-              вэб-дизайне.
-            </p>
-          </li>
-        </ul>
-        <button type="button" class="mobile-btn">Все услуги</button>
+          <h2 class="mobile-title">
+            Мы создаем мобильные приложения для крупных корпораций
+          </h2>
+          <p class="mobile-text">
+            Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
+            латинице с начала XVI века.
+          </p>
+          <ul class="mobile-list list">
+            <li class="mobile-item">
+              <h3 class="mobile-list-title">Создание сайтов</h3>
+              <p class="mobile-list-text">
+                Lorem Ipsum - это текст- "рыба", часто используе в печати и
+                вэб-дизайне.
+              </p>
+            </li>
+            <li class="mobile-item">
+              <h3 class="mobile-list-title">Создание сайтов</h3>
+              <p class="mobile-list-text">
+                Lorem Ipsum - это текст- "рыба", часто используе в печати и
+                вэб-дизайне.
+              </p>
+            </li>
+            <li class="mobile-item">
+              <h3 class="mobile-list-title">Создание сайтов</h3>
+              <p class="mobile-list-text">
+                Lorem Ipsum - это текст- "рыба", часто используе в печати и
+                вэб-дизайне.
+              </p>
+            </li>
+          </ul>
+          <button type="button" class="mobile-btn">Все услуги</button>
         </div>
       </section>
       <section class="standard">
-        <h2 class="standart-title">Высокие стандарты разработки</h2>
-        <p class="standart-text">
-          Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-          вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
-          латинице с начала XVI века. стандартной "рыбой" для текстов на
-          латинице с начала XVI века.
-        </p>
-        <a href="" class="standart-link">Подробнее о компании</a>
-        <img src="./img/img-1.png" alt="робочий стол" width="500" />
-        <ul class="standart-list list">
-          <li class="standart-item">
-            <span class="standart-item-count">125</span>
-            <p class="standart-item-text">Our projects</p>
-          </li>
-          <li>
-            <span class="standart-item-count">125</span>
-            <p class="standart-item-text">Our projects</p>
-          </li>
-          <li>
-            <span class="standart-item-count">125</span>
-            <p class="standart-item-text">Our projects</p>
-          </li>
-          <li>
-            <span class="standart-item-count">125</span>
-            <p class="standart-item-text">Our projects</p>
-          </li>
-          <li>
-            <span class="standart-item-count">125</span>
-            <p class="standart-item-text">Our projects</p>
-          </li>
-        </ul>
+        <div class="container">
+          <div class="standard-top">
+            <div class="standard-content">
+              <h2 class="standart-title">Высокие стандарты разработки</h2>
+              <p class="standart-text">
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+                вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+                текстов на латинице с начала XVI века. стандартной "рыбой" для
+                текстов на латинице с начала XVI века.
+              </p>
+              <a href="" class="standart-link">Подробнее о компании</a>
+            </div>
+            <img src="./img/img-1.png" alt="робочий стол" width="500" />
+          </div>
+          <ul class="standart-list list">
+            <li class="standart-item">
+              <span class="standart-item-count">125</span>
+              <p class="standart-item-text">Our projects</p>
+            </li>
+            <li>
+              <span class="standart-item-count">125</span>
+              <p class="standart-item-text">Our projects</p>
+            </li>
+            <li>
+              <span class="standart-item-count">125</span>
+              <p class="standart-item-text">Our projects</p>
+            </li>
+            <li>
+              <span class="standart-item-count">125</span>
+              <p class="standart-item-text">Our projects</p>
+            </li>
+            <li>
+              <span class="standart-item-count">125</span>
+              <p class="standart-item-text">Our projects</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
         <h2>Наши работы, на которых мы специализируемся</h2>
