--- a/index.html
+++ b/index.html
@@ -131,41 +131,54 @@
           </ul>
         </div>
       </section>
-      <section>
-        <h2>Наши работы, на которых мы специализируемся</h2>
-        <button type="button">Все услуги</button>
-        <ul>
-          <li>
-            <img src="./img/img-2.png" alt="командная работа" width="350" />
-            <h3><span>01.</span> Исследование и упаковка</h3>
-            <p>
-              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
-              на латинице с начала XVI века.
-            </p>
-            <a href="">Подробнее</a>
-          </li>
-          <li>
-            <img src="./img/img-2.png" alt="командная работа" width="350" />
-            <h3><span>01.</span> Исследование и упаковка</h3>
-            <p>
-              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
-              на латинице с начала XVI века.
-            </p>
-            <a href="">Подробнее</a>
-          </li>
-          <li>
-            <img src="./img/img-2.png" alt="командная работа" width="350" />
-            <h3><span>01.</span> Исследование и упаковка</h3>
-            <p>
-              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
-              на латинице с начала XVI века.
-            </p>
-            <a href="">Подробнее</a>
-          </li>
-        </ul>
+
+      <section class="works">
+        <div class="container">
+          <div class="works-header">
+            <h2 class="works-title">
+              Наши работы, на которых мы специализируемся
+            </h2>
+            <button type="button" class="works-btn">Все услуги</button>
+          </div>
+          <ul class="works-list list">
+            <li class="works-item">
+              <img src="./img/img-2.png" alt="командная работа" width="350" />
+              <h3 class="works-heading">
+                <span>01.</span> Исследование и упаковка
+              </h3>
+              <p class="works-text">
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+                вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+                текстов на латинице с начала XVI века.
+              </p>
+              <a href="" class="works-link">Подробнее</a>
+            </li>
+            <li class="works-item">
+              <img src="./img/img-2.png" alt="командная работа" width="350" />
+              <h3 class="works-heading">
+                <span>01.</span> Исследование и упаковка
+              </h3>
+              <p class="works-text">
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+                вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+                текстов на латинице с начала XVI века.
+              </p>
+              <a href="" class="works-link">Подробнее</a>
+            </li>
+            <li class="works-item">
+              <img src="./img/img-2.png" alt="командная работа" width="350" />
+              <h3 class="works-heading">
+                <span>01.</span> Исследование и упаковка
+              </h3>
+              <p class="works-text">
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+                вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+                текстов на латинице с начала XVI века.
+              </p>
+              <a href="" class="works-link">Подробнее</a>
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
         <h2>Наши проекты</h2>
