--- a/index.html
+++ b/index.html
@@ -68,25 +68,52 @@
           </p>
           <ul class="mobile-list list">
             <li class="mobile-item">
-              <h3 class="mobile-list-title">Создание сайтов</h3>
-              <p class="mobile-list-text">
-                Lorem Ipsum - это текст- "рыба", часто используе в печати и
-                вэб-дизайне.
-              </p>
+              <div class="circle-out">
+                <div class="circle-in">
+                  <svg class="mobile-icon" width="40" height="40">
+                    <use href="./img/icons.svg#icon-project"></use>
+                  </svg>
+                </div>
+              </div>
+              <div class="mobile-item-content">
+                <h3 class="mobile-list-title">Создание сайтов</h3>
+                <p class="mobile-list-text">
+                  Lorem Ipsum - это текст- "рыба", часто используе в печати и
+                  вэб-дизайне.
+                </p>
+              </div>
             </li>
             <li class="mobile-item">
-              <h3 class="mobile-list-title">Создание сайтов</h3>
-              <p class="mobile-list-text">
-                Lorem Ipsum - это текст- "рыба", часто используе в печати и
-                вэб-дизайне.
-              </p>
+              <div class="circle-out">
+                <div class="circle-in">
+                  <svg class="mobile-icon" width="40" height="40">
+                    <use href="./img/icons.svg#icon-project"></use>
+                  </svg>
+                </div>
+              </div>
+              <div class="mobile-item-content">
+                <h3 class="mobile-list-title">Создание сайтов</h3>
+                <p class="mobile-list-text">
+                  Lorem Ipsum - это текст- "рыба", часто используе в печати и
+                  вэб-дизайне.
+                </p>
+              </div>
             </li>
             <li class="mobile-item">
-              <h3 class="mobile-list-title">Создание сайтов</h3>
-              <p class="mobile-list-text">
-                Lorem Ipsum - это текст- "рыба", часто используе в печати и
-                вэб-дизайне.
-              </p>
+              <div class="circle-out">
+                <div class="circle-in">
+                  <svg class="mobile-icon" width="40" height="40">
+                    <use href="./img/icons.svg#icon-project"></use>
+                  </svg>
+                </div>
+              </div>
+              <div class="mobile-item-content">
+                <h3 class="mobile-list-title">Создание сайтов</h3>
+                <p class="mobile-list-text">
+                  Lorem Ipsum - это текст- "рыба", часто используе в печати и
+                  вэб-дизайне.
+                </p>
+              </div>
             </li>
           </ul>
           <button type="button" class="mobile-btn">Все услуги</button>
@@ -109,22 +136,37 @@
           </div>
           <ul class="standart-list list">
             <li class="standart-item">
+              <svg class="standsrt-icon" width="30" height="30">
+                <use href="./img/icons.svg#icon-web-programming"></use>
+              </svg>
               <span class="standart-item-count">125</span>
               <p class="standart-item-text">Our projects</p>
             </li>
             <li>
+              <svg class="standsrt-icon" width="30" height="30">
+                <use href="./img/icons.svg#icon-web-programming"></use>
+              </svg>
               <span class="standart-item-count">125</span>
               <p class="standart-item-text">Our projects</p>
             </li>
             <li>
+              <svg class="standsrt-icon" width="30" height="30">
+                <use href="./img/icons.svg#icon-web-programming"></use>
+              </svg>
               <span class="standart-item-count">125</span>
               <p class="standart-item-text">Our projects</p>
             </li>
             <li>
+              <svg class="standsrt-icon" width="30" height="30">
+                <use href="./img/icons.svg#icon-web-programming"></use>
+              </svg>
               <span class="standart-item-count">125</span>
               <p class="standart-item-text">Our projects</p>
             </li>
             <li>
+              <svg class="standsrt-icon" width="30" height="30">
+                <use href="./img/icons.svg#icon-web-programming"></use>
+              </svg>
               <span class="standart-item-count">125</span>
               <p class="standart-item-text">Our projects</p>
             </li>
