Добавляет нижнее подчеркивание в меню

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <nav class="header-nav">
           <ul class="header-list list">
             <li class="header-item">
-              <a href="" class="header-link link">Наши проекты</a>
+              <a href="" class="header-link link current">Главная</a>
             </li>
             <li class="header-item">
               <a href="" class="header-link link">Услуги</a>
             </li>
             <li class="header-item">
-              <a href="" class="header-link link">Главная</a>
+              <a href="" class="header-link link">Наши проекты</a>
             </li>
             <li class="header-item">
               <a href="" class="header-link link">Новости</a>
